@@ -40,6 +40,9 @@ from jinja2.environment import Environment, Template
 from jinja2.loaders import BaseLoader, FileSystemLoader, PackageLoader, \
      DictLoader, FunctionLoader, PrefixLoader, ChoiceLoader
 
+# bytecode caches
+from jinja2.bccache import BytecodeCache, FileSystemBytecodeCache
+
 # undefined types
 from jinja2.runtime import Undefined, DebugUndefined, StrictUndefined
 
